--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">å
-    <title>Psychic Game</title>
+    <title>Pychic Game</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
@@ -20,19 +14,35 @@
 
 <body>
 
-    <div id="game">
-        <h1> The Psychic Game </h1>
-        <span id="wordGuess">Guess what letter I'm thinking of!</span>
-        <span id="blankSpaces">Guess what letter I'm thinking of!</span>
-        <span id="guessesLeft">Guess what letter I'm thinking of!</span>
-        <span id="lettersGuessed">Guess what letter I'm thinking of!</span>
-
+    <p>guess what im thinking</p>
+    <div>
+        <span id="key-pressed"> <strong>Nothing.....</strong> </span>
     </div>
 
-    <script type="text/javascript">
+    <!----------------------------------------->
+    <!DOCTYPE html>
+    <html lang="en-us">
+
+    <head>
+        <meta charset="utf-8">
+        <title>Psychic Game</title>
+    </head>
+
+    <body>
+
+        <div id="scoreboard">
+            <h1> The Psychic Game </h1>
+            <p>Guess what letter I'm thinking of!</p>
+            <p>Wins:</p>
+            <p>Losses:</p>
+            <p>Guesses Left:</p>
+            <p>Your Guesses so far:</p>
+        </div>
+
+        <script type="text/javascript">
 
 
-    </script
+        </script>
 
     </body>
 
